--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
+gunicorn==20.1.0
 idna==3.4
 itypes==1.2.0
 Jinja2==3.1.2
@@ -28,3 +29,4 @@ social-auth-core==4.3.0
 sqlparse==0.4.3
 uritemplate==4.1.1
 urllib3==1.26.14
+whitenoise==6.4.0
